--- a/datascience_project/templates/skills.html
+++ b/datascience_project/templates/skills.html
@@ -30,7 +30,7 @@
 
     <main class="container">
         <h2><span class="logo-yellow">Навыки и инструменты</span> Data Science</h2>
-        <table class="table">
+         <table class="table">
             <thead>
                 <tr>
                     <th>Навык</th>
@@ -44,7 +44,41 @@
                     <td>R/SAS</td>
                     <td class="necessary">Необходим</td>
                 </tr>
-                <!-- Остальные строки остаются без изменений -->
+                <tr>
+                    <td>Программирование</td>
+                    <td>R, Python, Java, C/C++</td>
+                    <td class="necessary">Необходим</td>
+                </tr>
+                <tr>
+                    <td>Базы данных</td>
+                    <td>SQL, NoSQL (MongoDB, CouchDB, Cassandra и др.)</td>
+                    <td class="necessary">Необходим</td>
+                </tr>
+                <tr>
+                    <td>Обработка больших данных</td>
+                    <td>Hadoop, Spark, Flink</td>
+                    <td class="preferred">Желательно</td>
+                </tr>
+                <tr>
+                    <td>Алгоритмы и модели</td>
+                    <td>Регрессионные модели, SVM, деревья решений и др.</td>
+                    <td class="necessary">Необходим</td>
+                </tr>
+                <tr>
+                    <td>Фреймворки и библиотеки</td>
+                    <td>TensorFlow, Theano, CNTK, scikit-learn и др.</td>
+                    <td class="preferred">Желательно</td>
+                </tr>
+                <tr>
+                    <td>Доменные знания</td>
+                    <td>Понимание бизнес-задач, целей компаний, использование данных</td>
+                    <td class="preferred">Желательно</td>
+                </tr>
+                <tr>
+                    <td>Прочие навыки</td>
+                    <td>Интеллектуальное любопытство, коммуникативные навыки</td>
+                    <td class="preferred">Желательно</td>
+                </tr>
             </tbody>
         </table>
     </main>
