--- a/datascience_project/templates/gallery.html
+++ b/datascience_project/templates/gallery.html
@@ -30,7 +30,14 @@
 
     <section class="content">
         <h1><span class="logo-yellow">Галерея</span> изображений</h1>
+        <!-- Форма для загрузки изображения -->
+        <form method="post" enctype="multipart/form-data" class="upload-form">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Загрузить фото</button>
+        </form>
     </section>
+
     <div class="gallery">
         {% for image in images %}
             <img src="{{ image.image.url }}" alt="{{ image.alt_text }}" class="img-fluid">
