--- a/datascience_project/templates/register.html
+++ b/datascience_project/templates/register.html
@@ -19,6 +19,18 @@
             {% endfor %}
         </div>
         {% endif %}
+        {% if form.errors %}
+        <div class="errors">
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <p style="color: red;">{{ field.label }}: {{ error }}</p>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <p style="color: red;">{{ error }}</p>
+            {% endfor %}
+        </div>
+        {% endif %}
         <form action="{% url 'register' %}" method="POST" class="auth-form">
             {% csrf_token %}
             {{ form.as_p }}
