--- a/templates/skills/profile.html
+++ b/templates/skills/profile.html
@@ -149,6 +149,9 @@
             <a href="{% url 'skills' %}" class="nav-menu-item" data-hint="Узнать про навыки">Навыки</a>
             {% if user.is_authenticated %}
                 <a href="{% url 'profile' %}" class="nav-menu-item" data-hint="Посмотреть профиль">Профиль</a>
+                {% if user.is_superuser %}
+                    <a href="{% url 'admin_panel' %}" class="nav-menu-item" data-hint="Посмотреть Админ Панель">Админ Панель</a>
+                {% endif %}
                 <form action="{% url 'logout' %}" method="POST" style="display:inline;">
                     {% csrf_token %}
                     <button type="submit" class="nav-menu-item" data-hint="Выйти из аккаунта">Выход</button>
