--- a/static/main/gallery.css
+++ b/static/main/gallery.css
@@ -206,17 +206,33 @@ body {
 }
 
 .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
     padding: 20px;
-    padding-left: 50px;
     min-height: 80vh;
-    align-items: center; /* Vertically center the content */
 }
 
-/* New: Center the "Галерея пуста." text */
+.gallery-items {
+    display: flex;
+    flex-direction: row; /* Горизонтальное расположение */
+    overflow-x: auto; /* Горизонтальная прокрутка */
+    gap: 20px;
+    padding: 20px;
+    width: 100%;
+    margin: 10px;
+}
+
+.gallery-items::-webkit-scrollbar {
+    height: 8px;
+}
+
+.gallery-items::-webkit-scrollbar-thumb {
+    background-color: #f4b400;
+    border-radius: 10px;
+}
+
+.gallery-items::-webkit-scrollbar-track {
+    background-color: #333;
+}
+
 .gallery p {
     width: 100%;
     text-align: center;
@@ -225,18 +241,24 @@ body {
     margin: 0;
 }
 
-.gallery img {
-    width: 300px;
-    height: 300px;
+.gallery-item {
+    position: relative;
+    flex: 0 0 auto; /* Элементы не растягиваются, сохраняют свой размер */
+    width: 300px; /* Фиксированная ширина */
+    height: 300px; /* Фиксированная высота */
+}
+
+.gallery-item img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     border-radius: 10px;
     box-shadow: 0 4px 8px black;
     border: 5px solid #f4b400;
-    transform: translateY(20px);
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
-.gallery img:hover {
+.gallery-item img:hover {
     transform: scale(1.1);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
@@ -278,14 +300,6 @@ body {
 .upload-form button:hover {
     background-color: #f9c74f;
     transform: scale(1.05);
-}
-
-.gallery-item {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 50px;
 }
 
 .delete-toggle-btn {
@@ -337,20 +351,4 @@ body {
     justify-content: center;
     gap: 10px;
     margin-top: 15px;
-}
-
-@media (max-width: 768px) {
-    .gallery {
-        flex-direction: column;
-        align-items: center;
-        padding-left: 0;
-    }
-}
-
-@media (max-width: 480px) {
-    .gallery {
-        flex-direction: column;
-        align-items: center;
-        padding-left: 0;
-    }
 }
