--- a/templates/skills/profile.html
+++ b/templates/skills/profile.html
@@ -150,7 +150,7 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'profile' %}" class="nav-menu-item" data-hint="Посмотреть профиль">Профиль</a>
                 {% if user.is_superuser %}
-                    <a href="{% url 'admin_panel' %}" class="nav-menu-item" data-hint="Посмотреть Админ Панель">Админ Панель</a>
+                    <a href="{% url 'custom_admin:admin_dashboard' %}" class="nav-menu-item" data-hint="Посмотреть Админ Панель">Админ Панель</a>
                 {% endif %}
                 <form action="{% url 'logout' %}" method="POST" style="display:inline;">
                     {% csrf_token %}
